[tool.poetry]
name        = "dreadnought-viz"
version     = "1.3.0"
description = "Warhammer 40k themed real-time JACK audio visualizer"
authors     = ["Your Name <you@example.com>"]
packages    = [{ include = "dreadnought_visualizer.py" }]

[tool.poetry.scripts]
dreadnought-viz = "dreadnought_visualizer:main"

[tool.poetry.dependencies]
# NOTE: pyproject.toml / poetry.lock are for local dev only.
# The Nix build (flake.nix) uses nixpkgs packages directly and
# does NOT invoke poetry2nix, so no lock file is required for nix run/build.
python      = "^3.10"
pygame      = ">=2.5"
PyOpenGL    = ">=3.1"
numpy       = ">=1.24"
JACK-Client = ">=0.5"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
